# HDF-Guide

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
qrc/: dataset.html  intro.html  main.qrc  search.html
qrc/css/: main.css
src/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AnalysisViewWidget.cpp  AnalysisViewWidget.h  AttributeTableWidget.cpp  AttributeTableWidget.h  DatasetPreviewWidget.cpp  DatasetPreviewWidget.h  DatasetSearchWidget.cpp  DatasetSearchWidget.h  GroupBrowserWidget.cpp  GroupBrowserWidget.h  HDF5Model.cpp  HDF5Model.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  TerminalWidget.cpp  TerminalWidget.h  TerminalWidget.ui  main.cpp
